xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__treat_with_star.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"1 treat as xs:integer*\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(Expr(Some(Expr([
      Apply(ApplyExpr(
        path_expr: PathExpr(
          steps: [
            PrimaryExpr(Literal(Integer((Positive, [
              1,
            ])))),
          ],
        ),
        operator: Treat(Item(Item(
          item_type: AtomicOrUnionType(Name(
            name: "integer",
            prefix: Some("xs"),
            namespace: Some("http://www.w3.org/2001/XMLSchema"),
          )),
          occurrence: Many,
        ))),
      )),
    ])))),
  ],
)))
