xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__typed_array.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "parse_xpath_simple(\"'foo' instance of array(xs:integer)\")"
---
Ok(XPath(Expr([
  Path(PathExpr(
    steps: [
      PrimaryExpr(Expr(Some(Expr([
        Apply(ApplyExpr(
          path_expr: PathExpr(
            steps: [
              PrimaryExpr(Literal(String("foo"))),
            ],
          ),
          operator: InstanceOf(Item(Item(
            item_type: ArrayTest(TypedArrayTest(TypedArrayTest(
              item_type: Item(Item(
                item_type: AtomicOrUnionType(Name(
                  name: "integer",
                  prefix: Some("xs"),
                  namespace: Some("http://www.w3.org/2001/XMLSchema"),
                )),
                occurrence: One,
              )),
            ))),
            occurrence: One,
          ))),
        )),
      ])))),
    ],
  )),
])))
