xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__typed_function_type.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::SequenceType::parse(\"function(xs:integer) as xs:integer\", &namespaces)"
---
Ok(Item(Item(
  item_type: FunctionTest(TypedFunctionTest(TypedFunctionTest(
    parameter_types: [
      Item(Item(
        item_type: AtomicOrUnionType(Name(
          name: "integer",
          prefix: Some("xs"),
          namespace: Some("http://www.w3.org/2001/XMLSchema"),
        )),
        occurrence: One,
      )),
    ],
    return_type: Item(Item(
      item_type: AtomicOrUnionType(Name(
        name: "integer",
        prefix: Some("xs"),
        namespace: Some("http://www.w3.org/2001/XMLSchema"),
      )),
      occurrence: One,
    )),
  ))),
  occurrence: One,
)))
