xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__unprefixed_name.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::Name::parse(\"foo\")"
---
Ok(Name(
  name: "foo",
  prefix: None,
  namespace: None,
))
