xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__var_ref.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"$foo\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(VarRef(Name(
      name: "foo",
      prefix: None,
      namespace: None,
    ))),
  ],
)))
