xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__xpath_parse_error.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"1 + 2 +\")"
---
Err(ExpectedFound(
  span: SimpleSpan(
    start: 0,
    end: 7,
    context: (),
  ),
))
