xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__xpath_parse_value_template_a_with_leftover.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: xpath
---
XPath(Expr([
  Path(PathExpr(
    steps: [
      AxisStep(AxisStep(
        axis: Child,
        node_test: NameTest(Name(Name(
          name: "a",
          prefix: None,
          namespace: None,
        ))),
        predicates: [],
      )),
    ],
  )),
]))
